[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/PreviewPanel/UpgradePreview.gd" type="Script" id=1]
[ext_resource path="res://scenes/PreviewPanel/PreviewPanelWeapon.gd" type="Script" id=2]
[ext_resource path="res://sprites/res/base_font_12px.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel"]
anchor_right = 0.25
anchor_bottom = 0.288889
margin_bottom = -7.62939e-06
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 158.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 34.0
margin_right = 50.0
margin_bottom = 66.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_constants/margin_right = 9
custom_constants/margin_left = 9

[node name="UpgradePreview" type="Panel" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 9.0
margin_right = 41.0
margin_bottom = 32.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/UpgradePreview"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 156.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_constants/margin_left = 4
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2"]
margin_left = 4.0
margin_right = 102.0
margin_bottom = 94.0

[node name="LabelTitle" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer"]
margin_right = 98.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "No module selected"
align = 1
valign = 1

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 28.0
margin_right = 98.0
margin_bottom = 38.0

[node name="Label1" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer1"]
margin_right = 47.0
margin_bottom = 10.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Damage:"

[node name="Label1Value" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer1"]
margin_left = 68.0
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "0.0"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 98.0
margin_bottom = 52.0

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 10.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Fire rate:"

[node name="Label2Value" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 68.0
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "0.0"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 56.0
margin_right = 98.0
margin_bottom = 66.0

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer3"]
margin_right = 47.0
margin_bottom = 10.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Critical:"

[node name="Label3Value" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 68.0
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "0.0"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 70.0
margin_right = 98.0
margin_bottom = 80.0

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer4"]
margin_right = 47.0
margin_bottom = 10.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Prod. cost:"

[node name="Label4Value" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 68.0
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "0.0"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 98.0
margin_bottom = 94.0

[node name="Label5" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer5"]
margin_right = 47.0
margin_bottom = 10.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Prod. time:"

[node name="Label5Value" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 68.0
margin_right = 80.0
margin_bottom = 10.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "0.0"
